--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://examplesite.com/"
+baseURL: "https://cyfine.github.io/"
 title: Carter's Blog
 paginate: 5
 theme: PaperMod
@@ -98,7 +98,7 @@ params:
     hiddenInSingle: true # hide on single page
 
   editPost:
-    URL: "https://github.com/<path_to_repo>/content"
+    URL: "https://github.com//content"
     Text: "Suggest Changes" # edit text
     appendFilePath: true # to append file path to Edit link
 
