--- a/config.yml
+++ b/config.yml
@@ -98,7 +98,7 @@ params:
     hiddenInSingle: true # hide on single page
 
   editPost:
-    URL: "https://github.com//content"
+    URL: "https://github.com/Cyfine/cyfine.github.io/content"
     Text: "Suggest Changes" # edit text
     appendFilePath: true # to append file path to Edit link
 
