--- a/config.yml
+++ b/config.yml
@@ -9,7 +9,7 @@ buildFuture: false
 buildExpired: false
 
 googleAnalytics: UA-123-45
-
+disqusShortname: cyfine
 minify:
   disableXML: true
   minifyOutput: true
@@ -38,10 +38,10 @@ params:
   UseHugoToc: true
   disableSpecial1stPost: false
   disableScrollToTop: false
-  comments: false
+  comments: true
   hidemeta: false
   hideSummary: false
-  showtoc: false
+  showtoc: true
   tocopen: false
 
 
