--- a/config.yml
+++ b/config.yml
@@ -43,7 +43,7 @@ params:
   hideSummary: false
   showtoc: true
   tocopen: false
-
+  math:  true
 
   assets:
     # disableHLJS: true # to disable highlight.js
