--- a/config.yml
+++ b/config.yml
@@ -76,7 +76,7 @@ params:
 
   # home-info mode
   homeInfoParams:
-    Title: "Hi there \U0001F44B"
+    Title: "Hi there \U0001F44B 😀"
     Content: Welcome to my blog
 
   socialIcons:
